static/style.css
body {
    /*border:1px solid black;*/
}
div {
    box-sizing: border-box;
}


h3 {
    background-color: rgba(255, 255, 255, 1);
    border: 2px solid black;
    display: inline-block;
    font-style: italic;
    left: 0;
    margin: 0 !important;
    padding: 1px 40px;
    position: absolute;
    top: -10pt;
}

h1 {
    font-size: 26pt;
    margin: 0;
}

h2 {
    font-weight: normal;
    font-size:14pt;
    margin: 0 !important;
}
div.title_header {
    margin-bottom: 14pt;
    position: relative;
}
div.container:not(.first-container) {
    border-top: medium none;
}
div.container {
    border: 3px double black;
    padding:0;
    position: relative;
}
div#small_map img {
    height: 100pt;
    width: auto;
}

div#small_map p {
    bottom: 10pt;
    font-size: 6pt;
    margin: 0;
    padding: 0;
    position: absolute;
    right: 50pt;
}
div#small_map {
    position: absolute;
    right: 0pt;
    top: 0;
}
div.title_header ul.header_list:first-of-type {
    padding: 0;
}
ul.header_list {
    display: inline-block;
    font-size: 8pt;
    list-style: outside none none;
    margin: 0;
}

div.anchor {
    clear: both;
}
div.vis_container.left.quarter,
div.vis_container.right.quarter {
    width: 24%!important;
}
div.vis_container.left,
div.vis_container.right {
    width: 48%;
}
div.vis_container.left {
    float: left;
}

div.vis_container.right {
    float: right;
}

div.vis_container.span {
    clear: both;
}
div.container {
    page-break-inside: avoid;
    padding:5pt 0 10pt;
}
div.vis_container {
    margin: 1pt;

}
div.vis_container > * {
    max-width: 100%;
    padding: 1pt 5pt 0;
    width: 100%;
    margin-bottom: 0;
    margin-top:2pt;
}
div.vis_container > p {
    width: 95%
}
div.vis_container table td:not(:first-child),
div.vis_container table th:not(:first-child) {
    max-width: 40pt;
    /*overflow: hidden;*/
}

div.vis_container table tbody tr th:first-child,
div.vis_container table tbody tr td:first-child {
}
div.vis_container table thead tr th:not(:first-child),
div.vis_container table tbody tr td:not(:first-child) {
  text-align:right;
}
table {
    border-collapse: collapse;
    line-height: 10pt;
}
#business table {
    line-height: 14pt!important;
}
th {
    font-style: italic;
    line-height: 1.1em;
}
th, td {
    padding:0.5pt 0;
}
div.vis_container > img {
    display: block;
    margin: auto;
    max-height: 175pt;
    width: auto;
}

ul.float_list {
    list-style: outside none none;
    margin: 0;
}
ul.float_list li {
    display: inline-block;
    width: 48%;
}
h4 {
    background: rgba(255, 255, 255, 1) none repeat scroll 0 0;
    box-sizing: border-box;
    display: inline-blick;
    font-style: italic;
    margin: 0 !important;
    /*padding: 1px 15px;*/
    position: relative;
    top: 3pt;
    font-weight: normal;
}
div#logo {
    display: inline-block;
    height: 30pt;
}
div#logo > img {
    height: 70pt;
    position: absolute;
    right: 0;
    top: -10pt;
}
ul.indent_list {
    list-style: none;
}
ul.indent_list li {
    width: 95%
    padding:0 10pt;
}
.vis_container.thirds {
    clear: right;
    float: left;
    width: 32% !important;
}

@media screen {
    body {
        margin: 2% 10%;
        max-width: 80%;
        min-width: 800px;
    }
}
/* Print-specific rules */
@media print {
    @page {
        resolution:300dpi;
        size: 8.5in 11in;
        margin:0.2in 0.4in 0.75in;
        @bottom-left {
            font-size: 7pt;
            width:35%;
            text-align:left;
            vertical-align: top;
            content: "Town Profiles - Page " counter(page);
        }
        @bottom-center {
            font-size: 9pt;
            font-weight: bold;
            font-style: italic;
            width:30%;
            text-align: center;
            vertical-align: top;
            content: "www.cerc.com";
        }
        @bottom-right {
            font-size: 7pt;
            font-style: italic;
            width:35%;
            text-align:right;
            vertical-align: top;
            content: "No representation or warranties, expressed or implied, are given regarding the accuracy of this information.";
        }
    }
    body {
        font-size:8.5pt;
        font-family: "LiberationSerif";
    }
    h3 {
        top:-0.15in;
        left:0.2in;
    }
    .noprint {
        display: none;
    }
}

